--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -7,5 +7,5 @@ java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
 #com.logicbig.level=WARNING
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
-
+java.util.logging.FileHandler.pattern=out/logs/app.log
 java.util.logging.FileHandler.append=true
