--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,13 @@ repositories {
 }
 
 dependencies {
+    implementation 'junit:junit:4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
 
-test {
-    useJUnitPlatform()
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 }
