--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
 
-test {
-    useJUnitPlatform()
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 }
